@@ -8,6 +8,8 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed some paths in contrib/check_perms_grsecurity.py. Bug #411192.
+
     - Replies to commands sent to list-request now come From: list-owner
       instead of list-bounces.
 
